-updated: sexier search substitute spinner and overlay -fixed: spinner overlay z-index wasn't high enough

--- a/resources/assets/sass/components/_spinners.scss
+++ b/resources/assets/sass/components/_spinners.scss
@@ -22,7 +22,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #333;
+    background-color: #607D8B;
     -webkit-animation: sk-foldCubeAngle 2.4s infinite linear both;
     animation: sk-foldCubeAngle 2.4s infinite linear both;
     -webkit-transform-origin: 100% 100%;
